// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Rating /> renders correctly 1`] = `
<div
  className="rating -regular -orange"
>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7ZM274.63,347.82,256,334.49V134.39l26,78.91,7.24,22H394.63l-67.32,47.2-19.69,13.81,7.78,22.75,26.26,76.75Z"
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M480,208H308L256,48,204,208H32l140,96L118,464,256,364,394,464,340,304Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
  </span>
  <span
    className="text -regular -dark"
  >
    3.5
  </span>
</div>
`;

exports[`<Rating /> renders correctly with optional props 1`] = `
<div
  className="rating class -small -orange"
>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7ZM274.63,347.82,256,334.49V134.39l26,78.91,7.24,22H394.63l-67.32,47.2-19.69,13.81,7.78,22.75,26.26,76.75Z"
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M480,208H308L256,48,204,208H32l140,96L118,464,256,364,394,464,340,304Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M480,208H308L256,48,204,208H32l140,96L118,464,256,364,394,464,340,304Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
  </span>
  <span
    className="text -small -dark"
  >
    3.5
  </span>
</div>
`;

exports[`<Rating /> renders without score 1`] = `
<div
  className="rating class -small -orange"
>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M480,208H308L256,48,204,208H32l140,96L118,464,256,364,394,464,340,304Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M480,208H308L256,48,204,208H32l140,96L118,464,256,364,394,464,340,304Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M480,208H308L256,48,204,208H32l140,96L118,464,256,364,394,464,340,304Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M480,208H308L256,48,204,208H32l140,96L118,464,256,364,394,464,340,304Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M480,208H308L256,48,204,208H32l140,96L118,464,256,364,394,464,340,304Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
  </span>
  <span>
    <i
      className="icon -orange"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M480,208H308L256,48,204,208H32l140,96L118,464,256,364,394,464,340,304Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
  </span>
  <span
    className="text -small -dark"
  >
    0
  </span>
</div>
`;

exports[`<Rating /> should not render without max 1`] = `null`;
